--- a/AcornSharp/AcornSharp.csproj
+++ b/AcornSharp/AcornSharp.csproj
@@ -8,4 +8,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="10.2.1" />
+  </ItemGroup>
+
 </Project>
